--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.bartoszpop</groupId>
     <artifactId>composite-specification</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
     <name>Composite Specification API</name>
     <description>This project provides a composite implementation of org.springframework.data.jpa.domain.Specification.</description>
